-- Refatoração dos endPoints, retornando response entitys, tratando exceções com retornos amigaveis